array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nbNiveaux=0
  for (k<-1 to (num.size)-1){
    if (num(k)>num(k-1)){
      nbNiveaux=nbNiveaux +1
    }
  }
}